tests/evals/results/2026-04-24-0906-cli-skills/01-single-field-lookup-transcript.txt
EVAL TRANSCRIPT (AUTOMATED)
Case: 01-single-field-lookup
Mode: cli-skills
Date: 2026-04-24
Model: claude-sonnet-4-6
Duration: 234.7s
Tool calls: 15
Cost: $0.9299

============================================================
TURN 1
============================================================
PROMPT: What WordPress version is jppblank running?


⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wp jppblank core version"})
  ⎿  Exit code 1
error: unknown command 'jppblank'

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wp --help 2>&1 | head -30"})
  ⎿  Usage: nexus wp [options] [command]

Run WP-CLI commands on sites

Options:
  -h, --help                    display help for command

Commands:
  user-list [options] <target>  List WordPress users
  option-get <target> <key>     Get WordPress option value
  health [options] <target>     Check site health
  plugin                        Manage WordPress plugins
  theme                         Manage WordPress themes
  core                          Manage WordPress core
  db                       

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wp core version jppblank 2>&1"})
  ⎿  Exit code 1

▸ Resolving jppblank...
  WPE   · active · cached today

Error: HTTP 500: Internal Server Error

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js fleet health 2>&1 | grep -A2 -i \"jppblank\""})
  ⎿  (Bash completed with no output)

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js sites list 2>&1"})
  ⎿  Exit code 1

❌ Timed out waiting for Local. Is Local running?
Local isn't running. The site resolved as a WPE site but got a 500 from the API. Let me try the WPE install details directly.

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe install jppblank 2>&1"})
  ⎿  jppblank
────────────────────────────────────────
Environment:  production
Account:      w7579
Domain:       jppblank.wpenginepowered.com
PHP:          8.2
Target:       wpe:b97e432b-c10a-4f0a-9ce7-55cedd575099/jppblank@production

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe diagnose jppblank 2>&1"})
  ⎿  Exit code 1
Error: HTTP 500: Internal Server Error

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wp core version b97e432b-c10a-4f0a-9ce7-55cedd575099 2>&1"})
  ⎿  Exit code 1

❌ Timed out waiting for Local. Is Local running?

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe --help 2>&1"})
  ⎿  Usage: nexus wpe [options] [command]

Manage WP Engine accounts and installs

Options:
  -h, --help                                           display help for command

Commands:
  accounts [options]                                   List WP Engine accounts
  installs [options] [account]                         List installs for an account (or all accounts)
  install [options] <installId>                        Get details about a specific install
  backup [options] <target>                      

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe fleet-health 2>&1 | grep -A5 -i \"jppblank\""})
  ⎿  (Bash completed with no output)

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe fleet-health 2>&1 | head -50"})
  ⎿  ❌ Response returned an error code

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe installs w7579 2>&1 | grep -A10 \"jppblank\""})
  ⎿  (Bash completed with no output)

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe installs w7579 --json 2>&1 | head -100"})
  ⎿  Error: HTTP 500: Internal Server Error

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe installs --json 2>&1 | python3 -c \"import json,sys; data=json.load(sys.stdin); [print(i.get('name'), )
  ⎿  Exit code 1
Traceback (most recent call last):
  File "<string>", line 1, in <module>
    import json,sys; data=json.load(sys.stdin); [print(i.get('name'), i.get('php_version'), i.get('wordpress_version', 'N/A')) for i in data if 'jppblank' in i.get('name','')]
                          ~~~~~~~~~^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/json/__init__.py", line 293, in load
    return loads(fp.read(),
        cls=cls, object_hook=object_hook,
        pa

⏺ Bash({"command":"node /Users/jeremy.pollock/development/wpengine/local-addon-nexus-ai/bin/nexus.js wpe installs 2>&1 | grep -i \"jppblank\""})
  ⎿    jppblank (production)
    Domain:  jppblank.wpenginepowered.com
    Target:  wpe:b97e432b-c10a-4f0a-9ce7-55cedd575099/jppblank@production
  jppblankdev (development)
    Domain:  jppblankdev.wpenginepowered.com
    Target:  wpe:b97e432b-c10a-4f0a-9ce7-55cedd575099/jppblankdev@development
The `install` details don't include WP version and `diagnose` is returning 500 from the WPE API. Unfortunately, the nexus WPE commands don't expose WordPress version directly via the CAPI — it's not a field returned by the installs endpoint, and the `diagnose` API is currently erroring.

The WordPress version for **jppblank** isn't available through the WPE API right now. To get it, you could:
1. SSH into the environment: `ssh jppblank@jppblank.ssh.wpengine.net` and run `wp core version`
2. Start Local and run `nexus wp core version jppblank` once Local is running

--- FINAL RESULT ---
The `install` details don't include WP version and `diagnose` is returning 500 from the WPE API. Unfortunately, the nexus WPE commands don't expose WordPress version directly via the CAPI — it's not a field returned by the installs endpoint, and the `diagnose` API is currently erroring.

The WordPress version for **jppblank** isn't available through the WPE API right now. To get it, you could:
1. SSH into the environment: `ssh jppblank@jppblank.ssh.wpengine.net` and run `wp core version`
2. Start Local and run `nexus wp core version jppblank` once Local is running
